--- a/css/common.css
+++ b/css/common.css
@@ -17,13 +17,22 @@ ul {
   list-style-type: none;
 }
 
+h2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.33333;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.item {}
+
 .gallery {
   display: flex;
   flex-wrap: wrap;
   row-gap: 48px;
   column-gap: 24px;
-
-
 }
 
 .gallery-item {
